# zvella

./: .gitignore  CMakeLists.txt  README.md  context_for_ai.md  copy_arrays.py  logs.txt  mod.json
.github/workflows/: build.yml  release.yml
src/: DualRender.hpp  LayoutConfig.hpp  SpoutWrapper.cpp  SpoutWrapper.hpp  XDBotLayout.cpp  XDBotLayout.hpp  main.cpp
